.history/manifests/ing_20191018152034.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jujhar
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: jujhar
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /testpath
            backend:
              serviceName: test
              servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: potato-svc
  namespace: jujhar
  labels:
    environment: "production"
spec:
  # type: NodePort # internal
  type: LoadBalancer # external
  ports:
    - port: 80
      name: "http"
      targetPort: 3000
  selector:
    app: potato

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potato-deployment
  namespace: jujhar
  labels:
    app: potato
spec:
  selector:
    matchLabels:
      app: potato
  replicas: 3
  minReadySeconds: 5
  strategy:
    # indicate which strategy we want for rolling update
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 1

  template:
    metadata:
      labels:
        app: potato
    spec:
      restartPolicy: Always
      containers:
        - name: web
          image: roubleknew/k8s-training:v2
          ports:
            - name: web
              containerPort: 3000
              protocol: TCP
